去掉 FastJson，修改下载库

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,8 @@
         </activity>
         <activity android:name=".module.video.fullscreen.VideoFullscreenActivity">
         </activity>
-        <activity android:name=".module.news.article.NewsArticleActivity">
+        <activity android:name=".module.news.article.NewsArticleActivity"
+                  android:screenOrientation="portrait">
         </activity>
     </application>
 
